# sort_photos

./: .gitignore  .pre-commit-config.yaml  README.md  license.txt  pyproject.toml  readme.md  readme.txt  sort_mobile_photos.py  sort_photos.py
sort_photos/: __init__.py  main.py
sort_photos/cli/: __init__.py  common.py
