# Configuration file used by packaging tools, as well as other tools such as linters

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sort_photos"
version = "0.0.1"
description = "Command-line tool to rename photos by date, time and camera model, to sort them by filename"
dependencies = [
   "exifread",
   "typer",
]

[project.scripts]
sort-photos = "sort_photos.main:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
   "E",  # pycodestyle error
   "W",  # pycodestyle warning
   "I",  # isort
   "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
